# brain

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_HARNESS.md  BRAIN_EVOLUTION_PLAN.md  CHANGELOG.md  CRON_MAP.md  DATA_SOURCES.md  Dockerfile  FIVE_YEAR_SUSTAINABILITY.md  README.md  RUNBOOK.md  SPRINT_NEXT.md  STORAGE_MAP.md  __init__.py  bandit.yaml  brain_mcp_server.py  docker-compose.yml  pyproject.toml  qdrant-config.yaml  requirements.txt  ruff.toml  server.py
.omx/: project-memory.json
brain/: API.md  ARCHITECTURE.md  COMMERCIAL_READINESS.md  DEPLOY.md  EVAL_HISTORY.md  SECURITY_OPS.md
brain_core/: __init__.py  _watchdog.py  action_triggers.py  active_recall.py  adaptive_rag.py  agent_activity_report.py  agent_messenger.py  agent_preferences.py  answer_candidates.py  api_deps.py  atom_deboost.py  atom_deboost_cleanup.py  atom_recall_quality.py  atoms_gate.py  atoms_store.py  attention.py  audit_log.py  auto_supersede_overrides.py  autonomous_work.py  autonomy.py  autonomy_proposer.py  autopilot.py  backup_retention.py  batch_lock.py  belief_diff.py  belief_state.py  boot_context.py  brain_config_store.py  brain_loop.py  brain_replacement_readiness.py  breakers.py  canonical_design_drift.py  canonical_staleness.py  claude_memory_regen.py  claude_session.py  cli_llm.py  closed_loop_controller.py  coding_events.py  community_summaries.py  confidence_calibration.py  (+158 more)
cli/: _minio.py  analyze_boot.py  apply_entity_dedup_to_eval.py  apply_ontology_expansion.py  atoms_to_skills.py  audit_hermes_telegram_targets.py  audit_ontology.py  audit_qdrant_writes.py  audit_stale_current_truth.py  backfill_atom_evidence.py  backfill_atoms.py  backfill_canonical_status.py  backfill_canonical_xrefs.py  backfill_chris_uses.py  backfill_co_mention.py  backfill_distilled_provenance.py  backup_brain_db.py  backup_chroma.py  backup_docker_volumes.py  backup_neo4j.py  backup_qdrant.py  backup_restore_drill.py  backup_verify.py  batch_learn.py  batch_learn_openclaw.py  bench_all.py  bootstrap_feedback_from_eval.py  brain-spawn-claude  brain-spawn-codex  brain_cost_cli.py  brain_density_inject.sh  brain_doctor.py  brain_export.py  brain_finetune.py  brain_init.py  brain_journal_cli.py  brain_recall_cli.py  brain_stale_cli.py  bridge_atom_cleanup.py  bridge_atom_inventory.py  (+112 more)
config/: decommissioned_terms.json
docs/: ARCHITECTURE_AUDIT_2026-05-12.md  architecture-db-map-2026-06-11.md  architecture-dependency-audit-2026-06-09.md  brain-replacement-capability-gap-2026-06-11.md  brain-speak-digest-dedup-investigation-2026-05-15.md  chunking-tagging-policy.md  eval-drift-taxonomy-2026-06-09.md  ontology-rollout.md  ruff-debt-taxonomy-2026-06-09.md  slo-remediation-runbook.md  world-level-brain-audit-2026-05-05.md
ingest/: active_contacts.py  apple_health.py  browser.py  claude_code_sessions.py  code_repos.py  ghost_blog.py  git_activity.py  gmail.py  healthcheck.py  images.py  kuma_heartbeats.py  llm_dispatch.py  obsidian.py  openclaw_sessions.py  pdfs.py  personal.py  run_personal.sh  screen_time.py  shell_history.py
launchd/: ai.brain.log-rotation.plist  ai.brain.neo4j.plist  ai.brain.ollama.plist  ai.brain.ontology-gate.plist  ai.brain.orbstack-watchdog.plist  ai.brain.personal-webhook.plist  ai.brain.qdrant-backup.plist  ai.brain.qdrant.plist  ai.brain.server.plist  ai.hermes.backup.plist  ai.openclaw.brain-ci.plist  ai.openclaw.brain-reranker.plist  ai.openclaw.brain-server.plist  ai.openclaw.chroma-backup.plist  ai.openclaw.chromadb-native.plist  ai.openclaw.command-center.plist  ai.openclaw.log-rotation.plist  ai.openclaw.neo4j-native.plist  ai.openclaw.ontology-rollout-gate.plist  ai.openclaw.qdrant-backup.plist
pipeline/: __init__.py  backfill_calendar.py  common.py  (+21 more)
(+517 files in other folders)
