[project]
name = "brain"
version = "0.1.0"
description = "Chris's personal brain — RAG, memory, autonomy, and reasoning server (FastAPI on :8791)."
requires-python = "==3.14.*"
readme = "README.md"
authors = [{ name = "Chris Cho", email = "wheogus98@gmail.com" }]

dependencies = [
  # FastAPI / web
  "fastapi==0.135.3",
  "starlette==1.0.0",
  "uvicorn==0.44.0",
  # Phase M5: per-route rate limiting on /recall, /learn, /memory.
  "slowapi==0.1.9",
  "limits==5.8.0",
  "deprecated==1.3.1",
  "wrapt==2.1.2",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",

  # HTTP clients
  "httpx==0.28.1",
  "httpcore==1.0.9",
  "h11==0.16.0",
  "anyio==4.13.0",
  "aiohttp==3.13.5",
  "aiohappyeyeballs==2.6.1",
  "aiosignal==1.4.0",
  "frozenlist==1.8.0",
  "multidict==6.7.1",
  "yarl==1.23.0",
  "propcache==0.4.1",
  "requests==2.33.1",
  "urllib3==2.6.3",
  "charset-normalizer==3.4.7",
  "certifi==2026.2.25",
  "idna==3.11",

  # CLI / formatting
  "click==8.3.2",
  "typer==0.21.2",
  "rich==14.3.3",
  "shellingham==1.5.4",
  "Pygments==2.20.0",
  "markdown-it-py==4.0.0",
  "mdurl==0.1.2",

  # Logging / config
  "structlog==25.5.0",
  "PyYAML==6.0.3",

  # Scheduling
  "APScheduler==3.11.2",
  "tzlocal==5.3.1",
  "pytz==2026.1.post1",
  "python-dateutil==2.9.0.post0",
  "six==1.17.0",

  # Database
  "neo4j==6.1.0",

  # Object storage
  "boto3==1.42.86",
  "botocore==1.42.86",
  "s3transfer==0.16.0",
  "jmespath==1.1.0",

  # System
  "psutil==7.2.2",
  "filelock==3.25.2",
  "packaging==26.0",
  "attrs==26.1.0",
  "setuptools==81.0.0",

  # ML / embeddings / LoRA training stack
  "torch==2.11.0",
  "sentence-transformers==5.4.0",
  "transformers==5.5.3",
  "tokenizers==0.22.2",
  "peft==0.18.1",
  "accelerate==1.13.0",
  "safetensors==0.7.0",
  "huggingface_hub==1.10.1",
  "hf-xet==1.4.3",
  "datasets==4.8.4",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "numpy==2.4.4",
  "pandas==3.0.2",
  "pyarrow==23.0.1",
  "joblib==1.5.3",
  "threadpoolctl==3.6.0",
  "regex==2026.4.4",

  # ML support
  "Jinja2==3.1.6",
  "MarkupSafe==3.0.3",
  "fsspec==2026.2.0",
  "networkx==3.6.1",
  "sympy==1.14.0",
  "mpmath==1.3.0",
  "dill==0.4.1",
  "multiprocess==0.70.19",
  "xxhash==3.6.0",

  # M7-WS2: Docling for PDF text + image OCR ingestion. Pulls in ~50 transitive
  # deps (pillow, pypdfium2, opencv-python, ocrmac on macOS, etc.) — these are
  # documented as the broader docling install footprint, not pinned per-package.
  "docling==2.88.0",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-timeout==2.3.1",
  "hypothesis==6.122.3",
  "ruff==0.8.4",
  # bandit removed 2026-04-13: bandit 1.8.0 cannot parse Python 3.14 AST.
  # Security rules are enforced via ruff S-rules (ruff.toml::lint.select).
  "pre-commit==4.0.1",
  "respx==0.22.0",
]


[project.scripts]
brain-init = "cli.brain_init:main"

[build-system]
requires = ["uv_build>=0.5.0,<0.7.0"]
build-backend = "uv_build"

[tool.uv]
managed = true
package = false  # brain is a service, not a distributable library

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 60
addopts = "-q --strict-markers --tb=short"
markers = [
  "integration: requires qdrant/ollama/neo4j running + brain-server on :8791",
  "e2e: spawns brain-server subprocess",
  "slow: long-running test (>5s)",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
